# ReflectAI

./: .gitignore  COMPLETION_SUMMARY.txt  Cargo.toml  PROJECT_OVERVIEW.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  features required.txt  package-lock.json  package.json  tauri.conf.json
capabilities/: default.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatbotTab.jsx  HistoryTab.jsx  LinksTab.jsx  NotesTab.jsx
frontend/src/services/: ai.js  linkAnalyzer.js
frontend/src/styles/: ChatbotTab.css  HistoryTab.css  LinksTab.css  NotesTab.css
src/: lib.rs  main.rs
